# ping-log-parser

./: README.md  pyproject.toml  questions.txt
ping_log_parser/: __main__.py  parser.py
scripts/: gen_dummy.py
tests/: test_q1.py  test_q2.py  utils.py
tests/assets/: test1.txt  test2.txt  test3.txt
