[tool.poetry]
name = "ping-log-parser"
version = "0.1.0"
description = ""
authors = ["Yoichi TAKAI <contact@peacock0803sz.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
mypy = "^0.910"
black = "^21.11b1"
flake8 = "^4.0.1"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
